# python_realtime_pricing-

./: Dockerfile  README.md  pyproject.toml
app/: generate_values.py  main.py  settings.py
app/templates/: index.html
