[tool.poetry]
name = "test_task"
version = "0.1.0"
description = ""
authors = ["Andrey Lalaev"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"
Jinja2 = "^3.1.2"
websockets = "^10.3"
aiofiles = "^0.8.0"
black = "^22.6.0"
mypy = "^0.971"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
